
======================= Log Before Release =====================================
2013-01-14:
  * Add pbdNCDF4 examples.

2012-11-27:
  * Add pbdBASE and pbdDMAT examples.
  * Add numerous functions.

2012-11-06:
  * Add pbdMPI and pbdSLAP examples.
  * Add vignette with tons examples.
  * Add demo functions.
  * Add load.balance and unload.balance functions.
  * Add spmd2dmat and dmat2spmd functions.

2012-09-11:
  * Package created
  * DMAT - Added sql reader
  * DMAT - Added huge random matrix generation