@@ -1,7 +1,7 @@
 Package: pbdDEMO
 Title: Programming with Big Data -- Demonstrations of pbd Packages
 Version: 0.1-0
-Date: 2012-10-30
+Date: 2013-01-16
 Depends: R (>= 2.15.1), methods, rlecuyer, pbdMPI (>= 0.1-1), pbdSLAP,
         Rcpp (>= 0.9.10), pbdBASE (>= 0.1-1), pbdDMAT(>= 0.1-1),
         pbdNCDF4 (>= 0.1-0)
@@ -18,7 +18,7 @@ SystemRequirements: OpenMPI (>= 1.5.4) on Linux and Mac, MPICH2 (>=
         1.4.1p1) on Windows
 License: GPL (>= 2)
 URL: http://r-pbd.org/
-Packaged: 2013-01-16 05:07:16 UTC; snoweye
+Packaged: 2013-01-17 04:40:31 UTC; snoweye
 Author: Drew Schmidt [aut, cre],
   Wei-Chen Chen [aut],
   George Ostrouchov [aut],
