@@ -2,6 +2,7 @@
 
 .DEMO.CT <- list(
   ictxt = 0L, 
-  bldim = c(2L, 2L)
+  bldim = c(2L, 2L),
+  spmd.major = 1L
 ) # End of .DEMO.CT
 
