@@ -1,7 +1,10 @@
 
 ======================= Log Before Release =====================================
-2013-01-14:
+2013-01-16:
   * Add pbdNCDF4 examples.
+  * Add SPMD data matrix major for load balance functions, and
+    spmd2dmat and dmat2spmd functions.
+  * Add ncvar_put_* and ncvar_get_*, and simplify their examples.
 
 2012-11-27:
   * Add pbdBASE and pbdDMAT examples.
